# Jojos-Bizarre-API

./: .dockerignore  .gitattributes  .gitignore  Bakefile  Cargo.toml  Dockerfile  Jojo_NLP.ipynb  README.md  all_script.txt  anime_script.py  cached_lm_GPT2Tokenizer_128_quotes.txt  catchphrases.txt  docker-compose.yaml  docker-compose.yml  flask_api.py  preprocessing.py  quotes.txt  quotes_only.py  requirements.txt
.github/workflows/: prod.yml
flask/: flask_api.py
scripting/: anime_script.py
src/: main.rs
