[package]
name = "jojos_api" 
version = "0.1.0" 
author = "Rybeardawg1"
edition = "2021"

[dependencies]
serde_json = "1.0.68"
axum = "0.4"
tokio = { version = "1", features = ["full"] }
# tch = "0.14.0"
rand = "0.8"
# rust-bert = "0.22.0"
lazy_static = "1.4"
# openssl-sys = "0.9"
# openssl = "0.10.37"
